--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
             const [pin, setPin] = useState('');
             const handleLogin = (e) => {
                 e.preventDefault();
-                if (pin === '1234') {
+                if (pin === '43214321') {
                     setPage('admin');
                 } else {
                     alert('Incorrect PIN. Try 1234');
@@ -555,4 +555,5 @@
         root.render(<App />);
     </script>
 </body>
+
 </html>
